@@ -1,3 +1,8 @@
+2006-06-24  Robert Millan  <robertmh@gnu.org>
+
+	* lib/device.c (get_i2o_disk_name): New function.
+	(init_device_map) [__linux__]: Add support for I2O devices.
+
 2006-05-02  Pavel Roskin  <proski@gnu.org>
 
 	* stage2/stage2.c (run_menu): Fix "savedefault" to save only top
